<resources>
    <string name="app_name">Listillas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_next">NEXT</string>
    <string name="button_cancel">CANCEL</string>
    <string name="delete_button">DELETE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_button">SAVE</string>

    <!-- CONFIG LAYOUT -->
    <string name="visual_conf_title">Visual Configuration</string>
    <string name="provider_conf_title">Data provider Configuration</string>
    <string name="active">Active</string>

    <!-- ITEM LAYOUT -->
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="new_item">New Item</string>

    <string name="firebase_id">959865760130-94rjj2sufmibqhf4ul3p7tsd04t9grt3.apps.googleusercontent.com</string>
</resources>