<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailFragment">

    <!-- Caja para las cajas de texto -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_detail_margin"
            android:hint="@string/title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_detail_margin"
            android:layout_marginRight="@dimen/item_detail_margin"
            android:layout_marginBottom="@dimen/item_detail_margin"
            android:hint="@string/description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Caja para los botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteItemButtom"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_detail_margin"
                android:layout_marginBottom="@dimen/item_detail_margin"
                android:text="@string/delete_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelItembutton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_detail_margin"
                android:layout_marginBottom="@dimen/item_detail_margin"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/saveItembutton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_detail_margin"
                android:layout_marginBottom="@dimen/item_detail_margin"
                android:text="@string/save_button" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
